# CourseWork1

./: README.md  main.py  pyproject.toml  reports.txt  user_settings.json
src/: decorators.py  reports.py  services.py  utils.py  views.py
tests/: test_decorators.py  test_reports.py  test_services.py  test_utils.py
