[tool.poetry]
name = "coursework1"
version = "0.1.0"
description = ""
authors = ["Sergey Bordeychuk <twnue2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
black = "^25.1.0"
mypy = "^1.15.0"
flake8 = "^7.1.2"
isort = "^6.0.1"
logging = "^0.4.9.6"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
dotenv = "^0.9.9"
pandas-datareader = "^0.10.0"
yfinance = "^0.2.54"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
